# EnergyMe-Home

./: .gitignore  CONTRIBUTING.md  EnergyMe_Manuale_di_installazione_IT.md  README.md
.github/workflows/: platformio-build.yml  todo-to-issue.yml
Multiple-EM-API-query/: readme.md
documentation/: EnergyMe_Installation_Manual_EN.md  README.md
documentation/EasyEDA/: BOM_PCB_EnergyMe - Top board #1_2023-10-25.csv  BOM_PCB_EnergyMe - Top board #2_2023-10-25.csv  BOM_PCB_EnergyMe_Home - Main board_2023-10-25.csv  PickAndPlace_PCB_EnergyMe_Home - Main board_2023-10-25.csv
documentation/Schematics/: BOM.csv  COPYRIGHT  LICENSE  PickAndPlace - Main board.csv  PickAndPlace - Top board 1.csv  PickAndPlace - Top board 2.csv  pdf_to_png.py
examples/: README.md
examples/multiple-EMs-autoChannel/: README.md  index.php  meter_ajax.php
examples/multiple-energyme/: index.php  meter_ajax.php
install_docs/: README.md
install_docs/EN/: 01-hardware-assembly.md  02-electrical-installation.md  03-software-configuration.md  EnergyMe_Installation_Manual_EN.md
install_docs/IT/: 01-assemblaggio-hardware.md  02-installazione-elettrica.md  03-configurazione-software.md  EnergyMe_Manuale_di_installazione_IT.md
mcp-server/: .gitignore  README.md  mcp-config-example.json  pyproject.toml  server.py
source/: .gitignore  README.md  partitions.csv  platformio.ini  pyproject.toml
source/config/: ade7953.json  calibration.json  channel.json  custommqtt.json
source/css/: button.css  section.css  styles.css  typography.css
source/data/: energy.json  metadata.json
(+88 files in other folders)
